--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,38 @@
   font-family: 'Roboto', sans-serif;
 }
 
+button {
+  background: #087315;
+  background-image: -webkit-linear-gradient(top, #087315, #ffaa17);
+  background-image: -moz-linear-gradient(top, #087315, #ffaa17);
+  background-image: -ms-linear-gradient(top, #087315, #ffaa17);
+  background-image: -o-linear-gradient(top, #087315, #ffaa17);
+  background-image: linear-gradient(to bottom, #087315, #ffaa17);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  text-shadow: 11px 6px 5px #ff0000;
+  -webkit-box-shadow: 4px 4px 7px #666666;
+  -moz-box-shadow: 4px 4px 7px #666666;
+  box-shadow: 4px 4px 7px #666666;
+  font-family: Courier New;
+  color: #ffffff;
+  font-size: 26px;
+  padding: 10px 11px 10px 11px;
+  border: dotted #00ff33 7px;
+  text-decoration: none;
+}
+
+button:hover {
+  background: #ff0000;
+  background-image: -webkit-linear-gradient(top, #ff0000, #00b9d1);
+  background-image: -moz-linear-gradient(top, #ff0000, #00b9d1);
+  background-image: -ms-linear-gradient(top, #ff0000, #00b9d1);
+  background-image: -o-linear-gradient(top, #ff0000, #00b9d1);
+  background-image: linear-gradient(to bottom, #ff0000, #00b9d1);
+  text-decoration: none;
+}
+
 .clearfix {
   overflow: auto;
 }
